--- a/frontend/src/components/session/SignupForm.css
+++ b/frontend/src/components/session/SignupForm.css
@@ -28,6 +28,12 @@
     font-size: 14px;
 }
 
+.name-wrapper-signin{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
 #form-body{
     display: flex;
     flex-direction: column;
@@ -76,6 +82,7 @@
 .halfname-wrapper{
     display: flex;
     flex-direction: column;
+    width: 48%;
 }
 
 .name-input-box{
